--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
     "expo-firebase-firestore": "^2.0.0",
-    "expo-status-bar": "~1.0.3",
+    "expo-status-bar": "^1.0.4",
     "firebase": "^7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -34,7 +34,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.13.15"
   },
   "private": true
 }
