--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "^41.0.0",
+    "expo-camera": "~11.0.2",
+    "expo-face-detector": "~10.0.1",
+    "expo-file-system": "~11.0.2",
     "expo-firebase-firestore": "^2.0.0",
+    "expo-media-library": "~12.0.2",
+    "expo-permissions": "~12.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "^8.2.3",
     "ngrok": "^4.0.1",
