facial recognition and mimicing of 2d avatar

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Facera",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Facera_logo.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
