--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "11.2.3",
     "react-redux": "^7.2.3",
     "redux-thunk": "^2.3.0"
   },
